[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typyQ"
version = "0.1.0"
description = "Queue abstraction helpers and CLI utilities for heterogeneous clusters."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [{name = "typyQ Maintainers"}]
dependencies = []

[project.scripts]
jmake = "typyQ.cli.jmake:main"
jmod = "typyQ.cli.jmod:main"
jread = "typyQ.cli.jread:main"
jsub = "typyQ.cli.jsub:main"
jdeps = "typyQ.cli.jdeps:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true
